2007-05-12  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (pick-prefered-frame): make sure tile-group-last-frame
	is valid.
	(update-window-border): give non-normal windows a transparent background
	(reparent-window): likewise

	* primitives.lisp (print-object frame): include the frame number
	(*new-window-prefered-frame*): new global variable

	* core.lisp (group-add-window): call pick-prefered-frame
	(pick-prefered-frame): new function
	(restore-window): call pick-prefered-frame
	(restore-window): only focus the new window if it's in the current frame
	(:map-request): likewise
	(maybe-hide-windows): use remove, not delete.

2007-05-11  Shawn Betts  <sabetts@shitbender.gagrod>

	* stumpwm.asd (:stumpwm): use :serial dependencies

	* stumpwm.lisp (stumpwm-internal-loop): don't ungrab the keyboard
	when entering the debugger.

2007-05-10  Shawn Betts  <sabetts@shitbender.gagrod>

	* core.lisp (:key-press): ungrab the keyboard after reading the key.

2007-05-10  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (handle-keymap): don't grab the keyboard
	(:key-press): grab the keyboard at the beginning. ungrab it at the
	very end. call allow-events after grabbing.

	* user.lisp (eval-line): dont take screen arg. callers updated.

2007-05-09  Shawn Betts  <sabetts@vcn.bc.ca>

	* core.lisp (:configure-request): more verbose debug output
	(grab-keyboard): likwise
	(ungrab-keyboard): likwise
	(:focus-out): new event handler

2007-05-07  Shawn Betts  <sabetts@shitbender.gagrod>

	* user.lisp (eval-line): print all values
	(columnize): new function
	(display-keybinding): print prefix keys. print bindings in columns
	("reload"): properly notify when asdf isn't loaded

	* primitives.lisp (*suppress-abort-messages*): new global
	(concat): new defun

	* kmap.lisp (search-kmap): match command before checking if its a kmap

	* user.lisp ("windowlist"): properly tell the user when there are
	no managed windows.
	(argument-pop-or-read): throw :abort