@@ -1,3 +1,9 @@
+2007-05-13  Shawn Betts  <sabetts@vcn.bc.ca>
+
+	* stumpwm.lisp (stumpwm): add quit-stumpwm restart. set *package* to *default-package*
+
+	* primitives.lisp (*default-package*): new global
+
 2007-05-12  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* core.lisp (pick-prefered-frame): make sure tile-group-last-frame
